# ChangeLog for net-firewall/shorewall-shell
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.21 2009/01/22 08:24:52 pva Exp $

*shorewall-shell-4.2.4 (22 Jan 2009)
*shorewall-shell-4.0.15 (22 Jan 2009)

  22 Jan 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.0.15.ebuild,
  +shorewall-shell-4.2.4.ebuild:
  Version bump, bug #255437, thank Vieri for all work.

*shorewall-shell-4.2.1 (21 Nov 2008)
*shorewall-shell-4.0.14.1 (21 Nov 2008)

  21 Nov 2008; Peter Volkov <pva@gentoo.org>
  +shorewall-shell-4.0.14.1.ebuild, +shorewall-shell-4.2.1.ebuild:
  Version bump, bug #247669 and #247670, thank Vieri for maintenance.

*shorewall-shell-4.2.0 (30 Oct 2008)

  30 Oct 2008; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.0.ebuild:
  Version bump, bug #240596, thank Vieri for all the work.

  05 Oct 2008; Peter Volkov <pva@gentoo.org> -shorewall-shell-4.0.3.ebuild,
  -shorewall-shell-4.0.8.ebuild, -shorewall-shell-4.0.9.ebuild,
  -shorewall-shell-4.0.9.1.ebuild, -shorewall-shell-4.0.10.ebuild,
  -shorewall-shell-4.0.11.ebuild:
  Cleaning old versions, bug #239354, thank Vieri for maintainance.

*shorewall-shell-4.0.13.1 (15 Sep 2008)

  15 Sep 2008; Peter Volkov <pva@gentoo.org>
  +shorewall-shell-4.0.13.1.ebuild:
  Version bump, bug #237694, thank Vieri for all the work

*shorewall-shell-4.0.13 (07 Aug 2008)

  07 Aug 2008; Jeroen Roovers <jer@gentoo.org>
  +shorewall-shell-4.0.13.ebuild:
  Version bump thanks to Vieri (bug #234074).

*shorewall-shell-4.0.12 (05 Jul 2008)

  05 Jul 2008; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.0.12.ebuild:
  Version bump, bug #230467, thank Vieri for all the work

*shorewall-shell-4.0.11 (21 May 2008)

  21 May 2008; Markus Ullmann <jokey@gentoo.org>
  +shorewall-shell-4.0.11.ebuild:
  Version bump

  04 May 2008; Peter Volkov <pva@gentoo.org> shorewall-shell-4.0.10.ebuild: