@@ -1,6 +1,11 @@
 # ChangeLog for net-firewall/shorewall-shell
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.21 2009/01/22 08:24:52 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.22 2009/02/22 13:51:31 pva Exp $
+
+*shorewall-shell-4.2.6 (22 Feb 2009)
+
+  22 Feb 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.6.ebuild:
+  Version bump, thank Vieri for this work #257895.
 
 *shorewall-shell-4.2.4 (22 Jan 2009)
 *shorewall-shell-4.0.15 (22 Jan 2009)
